--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
-ALURAFLIX
+<header>ALURAFLIX</header>
 
 
-GOLAAAÇO DO REAL MADRID! Cristiano Ronaldo marca com uma bicicleta espetacular!
-#cristiano
+<h1>GOLAAAÇO DO REAL MADRID! Cristiano Ronaldo marca com uma bicicleta espetacular!</h1>
+<p>#cristiano</p>
+
+
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Cl6e47xqEb8?si=dTBloHJD96oN-gs1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
