--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
+<head>
+    <link rel="stylesheet" href="styles.css" />
+</head>
+
 <body>
 
 <header>ALURAFLIX</header>
-
 
 <h1>GOLAAAÇO DO REAL MADRID! Cristiano Ronaldo marca com uma bicicleta espetacular!</h1>
 <p>#cristiano</p>
