--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<html lan="pt-br">
+
 <head>
     <link rel="stylesheet" href="styles.css" />
     <title>Cr7</title>
@@ -5,15 +7,25 @@
 
 <body>
 
-<header>ALURAFLIX</header>
+    <header>ALURAFLIX</header>
 
-<h1>GOLAAAÇO DO REAL MADRID! Cristiano Ronaldo marca com uma bicicleta espetacular!</h1>
-<p>#cristiano</p>
+    <section>
+        <div>
+            <h1>GOLAAAÇO DO REAL MADRID! Cristiano Ronaldo marca com uma bicicleta espetacular!</h1>
+            <p>#cristiano</p>
+        </div>
 
 
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/Cl6e47xqEb8?si=dTBloHJD96oN-gs1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
-
+        <div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/Cl6e47xqEb8?si=dTBloHJD96oN-gs1"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+    </section>
 
 </body>
+
+
+
+</html>
